# ZION2.7TestNet

./: .dockerignore  .editorconfig  .env.backup  .env.example  .env.production  .gitattributes  .gitignore  .gitmodules  AFTERBURNER_TEST_SUMMARY.md  AMD_GPU_SETUP_LOG.md  CMakeLists-minimal.txt  CMakeLists-simple.txt  CMakeLists.txt  DAILY_SESSION_LOG_2025-09-26.md  DAILY_SESSION_LOG_2025-09-26_LATE.md  DAILY_SESSION_LOG_2025-09-30_EVENING.md  DAILY_SESSION_LOG_2025-10-02.md  DHARMA_INTEGRATION_COMPLETE_REPORT.md  Dockerfile  Dockerfile.production-v2  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_GPU_ALGORITHM_DECISION.md  FINAL_MISSION_SUMMARY_2025-10-02.md  GITHUB_RELEASE.md  GPU_ENERGY_EFFICIENCY_ANALYSIS.md  GPU_IMPLEMENTATION_COMPLETE.md  HASHRATE_ERROR_FIXED.md  HYBRID_CRYPTONOTE_REVOLUTION_2025-09-26.md  IMG_0584.HEIC  KOMPLETNI_INTEGRACE.md  LIBERATION-MANIFESTO.md  LIGHTNINGWIDGET_ERROR_FIXED.md  LIGHTNING_README.md  MIGRATED.md  MIGRATION_REAL_2.7.md  MINING_Z3_ADDRESSES_BACKUP.md  PRODUCTION_README.md  RAINBOW_BRIDGE_44_44.md  README-ZION-2675-AI-MINER.md  README.md  (+153 more)
.Trash-1000/: directorysizes
2.7/: FINALNA_OPTIMALIZACE_REPORT.md  INTEGRATION_REPORT.md  README.md  WALLET_INTEGRATION_SUCCESS.md  mining_cli.py  mining_wallet.json  perfect_memory_mining_config.json  start_integrated.sh  start_zion_27_complete.sh  test_mining_integration.py  upgrade_to_271.sh  zion_27_bridge.py  zion_defi.db  zion_exchange.db  zion_global.db  zion_global.db-journal  zion_wallet.json
2.7.1/: AI_INTEGRATION_README.md  README.md  README_INTEGRATION.md  ZION_2.7.1_IMPLEMENTATION.md  continuous_mining.py  demo_ai_integration.py  gpu_benchmark.py  gpu_mining_api.py  gpu_mining_dashboard.html  integration_test.py  monitor_ssh_mining.sh  package.json  requirements.txt  run_api.py  run_test.bat  setup_argon2.sh  setup_gpu.sh  setup_randomx.sh  ssh_mining_config.json  start.sh  start_ssh_mining.sh  test_ai_api.py  test_ai_integration.py  test_ai_orchestrator_gpu.py  test_api.py  test_asic_resistance.py  test_auto_tuning.py  test_basic_functionality.py  test_full_compatibility.py  test_gpu_miner.py  test_gpu_miner_real.py  test_gpu_mining_api.py  test_kristus_quantum_engine.py  test_multi_algorithms.py  test_real_hybrid_mining.py  test_srbminer_integration.py  test_srbminer_output.py  test_ssh_mining.sh  zion_cli.py  zion_wallet.json
FOUND.000/: FILE0000.CHK  FILE0001.CHK  FILE0002.CHK  FILE0003.CHK  FILE0004.CHK  FILE0005.CHK  FILE0006.CHK  FILE0007.CHK  FILE0008.CHK  FILE0009.CHK  FILE0010.CHK  FILE0011.CHK  FILE0012.CHK  FILE0013.CHK  FILE0014.CHK  FILE0015.CHK  FILE0016.CHK  FILE0017.CHK  FILE0018.CHK  FILE0019.CHK  FILE0020.CHK  FILE0021.CHK  FILE0022.CHK  FILE0023.CHK  FILE0024.CHK  FILE0025.CHK  FILE0026.CHK  FILE0027.CHK  FILE0028.CHK  FILE0029.CHK  FILE0030.CHK  FILE0031.CHK  FILE0032.CHK  FILE0033.CHK  FILE0034.CHK  FILE0035.CHK  FILE0036.CHK  FILE0037.CHK  FILE0038.CHK  FILE0039.CHK  (+82 more)
OLDfrontend/: .gitignore  COSMIC_INTEGRATION_COMPLETE.md  monitor-frontend.sh  next.config.js  package.json  start-dev.sh
System Volume Information/: IndexerVolumeGuid
V2/: about.html  blog.html  halls.html  script.js  zalohaindex.html
V2web/: arts.html  black.css  camp.html  dev.html  donate.css  donate.html  evoluzion.html  form.css  hemp.html  index.html  links.html  main.html  matrix.js  slider.css  sliders.js  stargate.css  stargate.js  style.css  video.js  woodart.html
ai/: live_stats.json  simple_12_threads_miner.py  system_afterburner.html  system_stats.py  zion-afterburner-api.py  zion-ai-gpu-afterburner.py  zion-ai-gpu-bridge.py  zion-gpu-dashboard.py  zion-gpu-power-manager.py  zion-mining-gpu-optimizer.py  (+11 more)
legacy/experiments/zion-cryptonote/src/: CMakeLists.txt
legacy/experiments/zion-cryptonote/src/CryptoNoteCore/: Blockchain.cpp  Blockchain.h  Transaction.cpp  TransactionApiExtra.h  TransactionExtra.h
legacy/experiments/zion-cryptonote/src/Daemon/: DaemonCommandsHandler.cpp
legacy/experiments/zion-cryptonote/src/Platform/Linux/System/: Dispatcher.cpp  Dispatcher.h  TcpConnection.cpp
legacy/experiments/zion-cryptonote/src/Serialization/: KVBinaryOutputStreamSerializer.cpp
legacy/experiments/zion-cryptonote/src/SimpleWallet/: SimpleWallet.cpp
legacy/experiments/zion-cryptonote/src/Transfers/: BlockchainSynchronizer.cpp
legacy/experiments/zion-cryptonote/src/crypto/: crypto.h  slow-hash.inl
src/mining/: CMakeLists.txt  zion-ai-mining.h  zion-gpu-miner.cpp  zion-miner-mit.cpp  zion-simple-miner.cpp  zion-simple-miner.h
src/mining/core/: cpu_worker.cpp  cpu_worker.h  hashrate_stats.h  job_manager.cpp  job_manager.h  mining_stats.h  share_submitter.cpp  share_submitter.h
zion-cryptonote/: CMakeLists.txt
zion-cryptonote/external.backup/google/: sparsetable
zion-cryptonote/include/: INode.h
zion-cryptonote/src/: CryptoNoteConfig.h
zion-cryptonote/src/CryptoNoteCore/: ICore.h  TransactionPrefixImpl.cpp
zion-cryptonote/src/P2p/: NetNode.cpp
zion-cryptonote/src/Rpc/: RpcServer.cpp
zion-cryptonote/src/crypto/: initializer.h  slow-hash.c
zion-miner-1.4.0/: CMakeLists.txt  build-info.h.in  zion-gpu-miner-unified.h  zion-miner-main.cpp  zion-miner-simple.cpp
zion/mining/: CMakeLists.txt  README-Enhanced.md  README.md  ZION-MINER-CHANGELOG-v1.4.0.md  ZION-MINER-PERFORMANCE-BENCHMARK.md  __init__.py  advanced-mining-features.py  config.ini  gui-hashrate-test.py  mining-performance-test.py  quick-hash-test.py  randomx_engine.py  real_randomx_optimized.py  test-enhanced.py  zion-cli-test.py  zion-cosmic-harmony.cpp  zion-gpu-miner-unified.cpp  zion-miner.py  zion-miner.sh  zion-nicehash-miner.py  zion-real-miner-enhanced.sh  zion-real-miner-v2.py  zion-real-miner.py  zion-real-miner.sh  zion-test-pool.py  zion-ultra-cli.py  zion-ultra-performance.py  zion-vs-xmrig-benchmark.py  zion_final_6k_12thread.py  zion_golden_middle_6500.py  zion_golden_perfect_6500.py  zion_maximum_performance.py  zion_memory_efficient_7k.py  zion_simple_7k.py  zion_stable_6k_miner.py  zion_stable_maximum.py  zion_ultimate_7k.py  zion_ultra_golden_6800.py  zion_ultra_stable_7k.py  zion_xmrig_killer.py  (+2 more)
(+1962 files in other folders)
